Improved help page, dont show this again added Improved dynamics

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My First App</string>
+    <string name="app_name">Meal Chooser</string>
     <item name="isClicked" type="id" />
     <item name="name" type="id" />
     <item name="picturePath" type="id" />
